Added UserAPI fixed delete Bug
